--- a/src/main/webapp/static/asset/css/pages/product/detail.css
+++ b/src/main/webapp/static/asset/css/pages/product/detail.css
@@ -161,7 +161,7 @@
     object-position: top;
 }
 .auto-height {
-    height: auto;
+    height: auto!important;
 }
 .product-detail-header__pic .magnified-product {
     position: absolute;
@@ -212,6 +212,7 @@
     margin-right: 1rem;
 }
 /*----- 상품평 끝 -----*/
+/*---------------- 상품문의 바깥페이지 시작 ----------------*/
 .product-detail-ask {
     padding: 2rem;
     border: 1px solid rgba(0,0,0,0.4);
@@ -221,6 +222,74 @@
     margin-top: 1rem;
     padding: 0.5rem 1rem;
 }
+.product-detail-ask__content {
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+    padding: 1rem;
+    margin-bottom: 0!important;
+}
+.product-detail-ask__content-box {
+    border-top: 3px solid rgba(0,0,0,.6);
+    margin-top: 2rem;
+    height: 15rem;
+    overflow: hidden;
+    position: relative;
+}
+
+.product-detail-ask__content__header {
+    margin-left: 4rem;
+    display: flex;
+    justify-content: space-between;
+}
+.product-detail-ask__content__header .email {
+    font-weight: 600;
+}
+.product-detail-ask__content__header .date {
+    font-weight: 500;
+    color: rgba(0,0,0,0.6);
+}
+.product-detail-ask__content__body {
+    margin-left: 4rem;
+}
+.reply-icon {
+    float: left;
+    background-image: url(//img1a.coupangcdn.com/image/coupang/product/icon-reply.png);
+    width: 15px;
+    height: 18px;
+    background-size: 0.9rem;
+    margin-bottom: 0!important;
+    margin-right: 5px!important;
+    margin-top: 5px;
+}
+.question-or-answer {
+    display: block;
+    color: white;
+    background: gray;
+    float: left;
+    padding: 0.4rem 0.6rem;
+    margin-right: 1rem;
+}
+.question-or-answer.question {
+}
+.question-or-answer.answer {
+    background: #346aff;
+}
+.product-detail-ask__content-box__spreader {
+    display: block;
+    background: white;
+    border: 1px solid var(--blue);
+    color: var(--blue);
+    width: 200px;
+    height: 45px;
+    text-align: center;
+    line-height: 45px;
+    margin: 0 auto;
+    bottom: 0px;
+    position: absolute;
+    left: calc(50% - 100px);
+    font-weight: 600;
+    cursor: pointer;
+}
+/*---------------- 상품문의 바깥페이지 끝 ----------------*/
 /*---------------- 상품문의 미니 페이지 시작----------------*/
 .close-pop {
     cursor: pointer;
